# stoq

./: .bzrignore  .coverage_exceptions.json  .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  AUTHORS  CONTRIBUTORS  COPYING.pt_BR  ChangeLog  INSTALL  MANIFEST.in  Makefile  NEWS  README  README.rst  __main__.py  async.mk  create-release.sh  freeze.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  setup_old.py  stoq.desktop  stoq.nsis  stoq.spec  stoqapp.py  stoqdbadmin.py  stoqdrivers.spec  stoqlib.spec
.tx/: config
common/: async.mk
data/: AbstractProductStep.glade  AdditionListSlave.glade  AddressEditor.glade  AddressSlave.glade  BankDataSlave.glade  BaseCashSlave.glade  BaseSellableCategoryDataSlave.glade  BaseTemplate.glade  BasicDialog.glade  BillCheckMethodSlave.glade  BillDataSlave.glade  BranchDetailsSlave.glade  BranchSettingsStep.glade  BranchStationSettingsStep.glade  CashAdvanceEditor.glade  CashOutEditor.glade  CfopEditor.glade  CheckBillSettingsSlave.glade  ClientDetailsDialog.glade  ClientStatusSlave.glade  CompanyDocumentsSlave.glade  ContactEditor.glade  CredProviderDetailsSlave.glade  CreditCardDetailsStep.glade  CreditProviderMethodSlave.glade  CustomerStep.glade  DatabaseSettingsStep.glade  DateSearchSlave.glade  DebitCardDetailsStep.glade  DeliveryEditor.glade  DeviceConstantsEditor.glade  DeviceSettingsEditor.glade  DeviceSettingsStep.glade  DiscountChargeSlave.glade  EmployeeDetailsSlave.glade  EmployeeRoleHistorySlave.glade  EmployeeRoleSlave.glade  EmployeeStatusSlave.glade  ExistingPersonStep.glade  FilterSlave.glade  (+78 more)
debian/: changelog  clean  control  copyright  preinst  pydist-overrides  pyversions  rules  stoq-client.install  stoq-server.install  stoq.install  stoq.postinst  watch
diagrams/: PaymentMethodDiagram.dia  SaleObjectDiagram.dia  SalesDiagram.dia  person_diagram.dia  stoq-domain-classes.dia  stoq-prototype-diagram.dia
docs/: CONTRIBUTORS  NEWS  README  copyright  credits_ptBR.txt  details_ptBR.txt  fiscal-driver-template.py  general_details_ptBR.txt  identification_ptBR.txt  individual_data_ptBR.txt  payment_methods_ptBR.txt  release-checklist.txt  release-howto.txt  release-notes.txt  research_list_ptBR.txt  users_register_ptBR.txt
fiscalprinter/: common.py  configparser.py  constants.py  exceptions.py  fiscalprinter.conf  log.py  networkserial.py  printer.py  serialdevice.py
pixmaps/: logo.xpm
po/: POTFILES.list  ar.po  bs.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  es.po  es_CL.po  es_ES.po  fi.po  fr.po  hr.po  hu.po  hu_HU.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  stoq.pot  stoqdrivers.pot  stoqlib.pot  sv.po  tr.po
po-stoqlib/: POTFILES.list  el.po  es_CL.po  es_ES.po  pt_BR.po  sv.po
sbin/: init-database
stoq/: __init__.py  __uninstalled__.py  api.py  daemonmain.py  dbadmin.py  environ.py  main.py
stoq-merge/: CONTRIBUTORS  COPYING  INSTALL  MANIFEST.in  setup.py  stoq.desktop
stoqdrivers/: __init__.py  __version__.py  abicomp.py  abicompcodec.py  base.py  common.py  configparser.py  constants.py  enum.py  escp.py  exceptions.py  interfaces.py  log.py  networkserial.py  printer.py  serialbase.py  serialdevice.py  translation.py  utils.py
stoqlib/: __init__.py  __uninstalled__.py  __version__.py  api.py  common.py  database.py  enums.py  environ.py  exceptions.py
tests/: __init__.py  base.py  bootstrap.py  (+43 more)
(+4665 files in other folders)
